modified:   nbproject/private/private.properties 	modified:   our_sait/index.html 	modified:   our_sait/portfolio_type2.html 	modified:   our_sait/single-project.html 	modified:   our_sait/tmpl.html

--- a/our_sait/index.html
+++ b/our_sait/index.html
@@ -12,10 +12,10 @@
         <meta name="viewport" id="view" content="width=device-width minimum-scale=1, maximum-scale=1" />
 
         <title>Наш сайт</title>
-        <meta name="description" content="TouchM is a premium responsive HTML5 / CSS3 which uses the best practices of latest technologies and is compatible with all mobile devices. " />
-        <meta name="keywords" content="Responsive, HTML5, CSS3, mobile, ThemeForest Theme, HTML% Template, Template" />
+        <meta name="description" content="" />
+        <meta name="keywords" content="" />
         <meta name="dcterms.dateCopyrighted" content="2004-2012">
-        <meta name="dcterms.rightsHolder" content="www.forgrafx.com">
+        <meta name="dcterms.rightsHolder" content="">
         <meta name="author" content="fografx.com" /> 
 
         <!-- Included CSS Files (Compressed) -->
