modified:   our_sait/index.html

--- a/our_sait/index.html
+++ b/our_sait/index.html
@@ -108,9 +108,9 @@
 
                 <!-- Logo -->
 
-                <div class="three columns">
+                <div class="three columns" style="text-align: center;">
 
-                    <a href="index.html" id="logo"><h1>ЛОГО <span>ТУТ</span></h1></a>
+                    <a href="index.html" id="logo"><h1>WSF </h1> <br> <span style="font-size: 16px;">Web Saits Factory</span></a>
 
                 </div>
 
