modified:   our_sait/index.html

--- a/our_sait/index.html
+++ b/our_sait/index.html
@@ -110,7 +110,7 @@
 
                 <div class="three columns">
 
-                    <a href="index.html" id="logo"><h1 style="font-weight: bold;">Olant <span  style="font-weight: normal;margin-left: -6px;font-size: 28px;">Sites</span></h1></a>
+                    <a href="index.html" id="logo"><h1 style="font-weight: bold; color: #ff6633; text-decoration: underline;">Olant <span  style="font-weight: normal;margin-left: -6px;font-size: 28px;color: #000;">Sites</span></h1></a>
 
                 </div>
 
